@@ -171,6 +171,7 @@
 	- popt: mingw32 portability configure check (#67911).
 	- teach gendiff about unreadable files (#42666).
 	- python: sanity check fixes on rpmts/rpmte methods.
+	- have rpmdb-redhat autoconfigure rpm to use %%_solve_dbpath.
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
